--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:TouchKeyboardMouse.Controls"
         Title="Touch Keyboard &amp; Mouse"
-        WindowStyle="None"
+        WindowStyle="SingleBorderWindow"
         WindowState="Normal"
         AllowsTransparency="False"
         Topmost="True"
@@ -13,10 +13,6 @@
         MinWidth="800"
         MinHeight="400"
         Loaded="Window_Loaded">
-    
-    <WindowChrome.WindowChrome>
-        <WindowChrome CaptionHeight="40" ResizeBorderThickness="6" GlassFrameThickness="0"/>
-    </WindowChrome.WindowChrome>
     
     <Grid>
         <Grid.ColumnDefinitions>
